--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "80:80"
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./src:/var/www/
+      - ./src:/var/www
     depends_on:
       - php
 
@@ -15,7 +15,7 @@ services:
     build: ./docker/php
     user: "1000:1000"
     volumes:
-      - ./src:/var/www/
+      - ./src:/var/www
 
   mysql:
     image: mysql:8.0.26
